Fixed right aligned nav button

--- a/src/style.css
+++ b/src/style.css
@@ -52,7 +52,7 @@ a {
     text-align: center;
     position: absolute;
     top: 0;
-    right: 0;
+    right: 20px;
     font-size: 20px;
     line-height: 20px;
     padding: 15px;
